--- a/pages/contact.html
+++ b/pages/contact.html
@@ -10,16 +10,16 @@ title: Contact
   <table class="table">
     <tbody>
         <tr>
-            <th scope="col">Address</th>
-            <th scope="col"><p>Oregon State University<br>Department of Microbiology<br>Nash Hall 554<br> Corvallis, OR 97331</p></th>
-        </tr>
-        <tr>
             <th scope="col">Email</th>
-            <th scope="col">humphrei[at]oregonstate[dot]edu</th>
+            <th scope="col">humphrei[at]oregonstate[dot]edu</p></th>
         </tr>
         <tr>
             <th scope="col">Twitter</th>
-            <th scope="col">@IanRHum</th>
+            <th scope="col">@IanRHum</p></th>
+        </tr>
+        <tr>
+            <th scope="col">Address</th>
+            <th scope="col"><p>Oregon State University<br>Department of Microbiology<br>Nash Hall 554<br> Corvallis, OR 97331</p></th>
         </tr>
     </tbody>
   </table>
