--- a/pages/contact.html
+++ b/pages/contact.html
@@ -11,6 +11,7 @@ title: Contact
     <tbody>
         <tr>
             <th scope="col">Email</th>
+            <th scope="col">img src="images/gmail_logo.png" class="d-block w-100" alt="..."</th>
             <th scope="col">humphrei[at]oregonstate[dot]edu</p></th>
         </tr>
         <tr>
