--- a/pages/contact.html
+++ b/pages/contact.html
@@ -11,6 +11,9 @@ title: Contact
     <tbody>
         <tr>
             <th scope="col">Email</th>
+            <td class="w-25">
+			      <img src="images/gmail_logo.png" class="img-fluid img-thumbnail" alt="Sheep">
+		        </td>
             <th scope="col">images/gmail_logo.png</th>
             <th scope="col">humphrei[at]oregonstate[dot]edu</p></th>
         </tr>
