--- a/pages/contact.html
+++ b/pages/contact.html
@@ -12,8 +12,8 @@ title: Contact
         <tr>
             <th scope="col">Email</th>
             <td class="w-25">
-			      <img src="images/gmail_logo.png" class="img-fluid img-thumbnail" alt="Sheep">
-		        </td>
+		<img href="/images/gmail_logo.png" class="img-fluid img-thumbnail" alt="email">
+	    </td>
             <th scope="col">images/gmail_logo.png</th>
             <th scope="col">humphrei[at]oregonstate[dot]edu</p></th>
         </tr>
