--- a/pages/contact.html
+++ b/pages/contact.html
@@ -11,9 +11,12 @@ title: Contact
     <tbody>
         <tr>
             <th scope="col">Email</th>
-            <td class="w-25">
-		<img href="/images/gmail_logo.png" class="img-fluid img-thumbnail" alt="email">
-	    </td>
+            <th scope="col">
+		<th class="thumbnail">
+		<a href="/images/gmail_logo.png">
+		    <img src="/images/gmail_logo.png" alt="Image">
+		</a>
+	    </th>
             <th scope="col">images/gmail_logo.png</th>
             <th scope="col">humphrei[at]oregonstate[dot]edu</p></th>
         </tr>
