--- a/pages/contact.html
+++ b/pages/contact.html
@@ -6,7 +6,7 @@ title: Contact
 <h4> Contact</h4> 
 <br> 
 
-<div class="table-borderless">
+<div class="table">
   <table class="table">
     <tbody>
         <tr>
