--- a/pages/contact.html
+++ b/pages/contact.html
@@ -7,7 +7,7 @@ title: Contact
 <br> 
 
 <div class="table">
-  <table class="table">
+  <table class="table-borderless">
     <tbody>
         <tr>
             <th scope="col">Email</th>
