--- a/pages/contact.html
+++ b/pages/contact.html
@@ -30,4 +30,7 @@ title: Contact
         </tr>
     </tbody>
   </table>
+
+  <a class="twitter-timeline" href="https://twitter.com/IanRHum">Tweets by IanRHum</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+
 </div>
