--- a/pages/contact.html
+++ b/pages/contact.html
@@ -5,13 +5,31 @@ title: Contact
 
 <h4> Contact</h4> 
 <br> 
-
-<div class="table">
-  <table class="table-borderless">
+<div class="container">
+  <div class="table">
+    <table class="table-borderless">
     <tbody>
-        <tr>
-            <th scope="col">Email</th>
-            <th scope="col">
+      <tr>
+        <td>Email</td>
+        <td><img src="/images/gmail_logo.png" alt="Image"></td>
+        <td>humphrei[at]oregonstate[dot]edu</td>
+      </tr>
+      <tr>
+        <td>Twitter</td>
+        <td><img src="/images/twitter_logo.png" alt="Image"></td>
+        <td>@IanRHum</td>
+      </tr>
+      <tr>
+        <td>Address</td>
+        <td><img src="/images/mail_logo.png" alt="Image"></td>
+        <td>Oregon State University <br> Department of Microbiology <br> Nash Hall 554 <br> Corvallis, OR 97331</td>
+      </tr>
+    </tbody>
+  </table>
+</div>
+	    <tr>
+        <td scope="col">Email</th>
+        <td scope="col">
 		<th class="thumbnail">
 		<a href="/images/gmail_logo.png">
 		    <img src="/images/gmail_logo.png" alt="Image">
