--- a/pages/contact.html
+++ b/pages/contact.html
@@ -21,7 +21,7 @@ title: Contact
       </tr>
       <tr>
         <td>Address</td>
-        <td><img src="/images/mail_logo.png" alt="Image"></td>
+        <td><img src="/images/mailbox_logo.png" alt="Image"></td>
         <td>Oregon State University <br> Department of Microbiology <br> Nash Hall 554 <br> Corvallis, OR 97331</td>
       </tr>
     </tbody>
