--- a/pages/contact.html
+++ b/pages/contact.html
@@ -11,17 +11,17 @@ title: Contact
     <tbody>
       <tr>
         <td>Email</td>
-        <td><img src="/images/gmail_logo.png" alt="Image"></td>
+        <td><img src="/images/gmail_logo.png" width="30" height="30" alt="email_image"></td>
         <td>humphrei[at]oregonstate[dot]edu</td>
       </tr>
       <tr>
         <td>Twitter</td>
-        <td><img src="/images/twitter_logo.png" alt="Image"></td>
+        <td><img src="/images/twitter_logo.png" width="40" height="40" alt="twitter_image"></td>
         <td>@IanRHum</td>
       </tr>
       <tr>
         <td>Address</td>
-        <td><img src="/images/mailbox_logo.png" alt="Image"></td>
+        <td><img src="/images/mailbox_logo.png" width="50" height="50" alt="mailbox_image"></td>
         <td>Oregon State University <br> Department of Microbiology <br> Nash Hall 554 <br> Corvallis, OR 97331</td>
       </tr>
     </tbody>
