--- a/pages/contact.html
+++ b/pages/contact.html
@@ -11,7 +11,7 @@ title: Contact
       <br> 
       <tr>
         <td><img src="/images/gmail_logo.png" width="45" height="45" alt="email_image"></td>
-        <td>{text-align: center} humphrei[at]oregonstate[dot]edu</td>
+        <td text-align: center>humphrei[at]oregonstate[dot]edu</td>
       </tr>
       <tr>
         <td><img src="/images/twitter_logo.png" width="45" height="45" alt="twitter_image"></td>
