--- a/pages/contact.html
+++ b/pages/contact.html
@@ -10,8 +10,8 @@ title: Contact
       <h4> Contact</h4> 
       <br> 
       <tr>
-        <td><img src="/images/gmail_logo.png" width="45" height="45" alt="email_image"></td>
-        <td text-align: center>humphrei[at]oregonstate[dot]edu</td>
+        <td align=center><img src="/images/gmail_logo.png" width="45" height="45" alt="email_image"></td>
+        <td>humphrei[at]oregonstate[dot]edu</td>
       </tr>
       <tr>
         <td><img src="/images/twitter_logo.png" width="45" height="45" alt="twitter_image"></td>
