--- a/pages/contact.html
+++ b/pages/contact.html
@@ -10,15 +10,15 @@ title: Contact
       <h4> Contact</h4> 
       <br> 
       <tr>
-        <td align=center><img src="/images/gmail_logo.png" width="45" height="45" alt="email_image"></td>
+        <td align="center"><img src="/images/gmail_logo.png" width="45" height="45" alt="email_image"></td>
         <td>humphrei[at]oregonstate[dot]edu</td>
       </tr>
       <tr>
-        <td><img src="/images/twitter_logo.png" width="45" height="45" alt="twitter_image"></td>
+        <td align="center"><img src="/images/twitter_logo.png" width="45" height="45" alt="twitter_image"></td>
         <td>@IanRHum</td>
       </tr>
       <tr>
-        <td><img src="/images/mailbox_logo.png" width="45" height="45" alt="mailbox_image"></td>
+        <td align="center"><img src="/images/mailbox_logo.png" width="45" height="45" alt="mailbox_image"></td>
         <td>Oregon State University <br> Department of Microbiology <br> Nash Hall 554 <br> Corvallis, OR 97331</td>
       </tr>
     </tbody>
