--- a/pages/contact.html
+++ b/pages/contact.html
@@ -11,7 +11,7 @@ title: Contact
       <br> 
       <tr>
         <td align="center"><img src="/images/gmail_logo.png" width="45" height="45" alt="email_image"></td>
-        <td>humphrei[at]oregonstate[dot]edu</td>
+        <td>ian[nospace]humph[at]uw[dot]edu</td>
       </tr>
       <tr>
         <td align="center"><img src="/images/twitter_logo.png" width="45" height="45" alt="twitter_image"></td>
@@ -19,7 +19,7 @@ title: Contact
       </tr>
       <tr>
         <td align="center"><img src="/images/mailbox_logo.png" width="45" height="45" alt="mailbox_image"></td>
-        <td>Oregon State University <br> Department of Microbiology <br> Nash Hall 554 <br> Corvallis, OR 97331</td>
+        <td>University of Washington <br> Department of Biochemistry <br> Institute for Protein Design <br> NanoES/MolES <br> Seattle, WA 98105</td>
       </tr>
     </tbody>
   </table>
