--- a/pages/resources.html
+++ b/pages/resources.html
@@ -11,8 +11,8 @@ title: Resources
       <br> 
       <tr>
         <td align="center"><img src="/images/gmail_logo.png" width="45" height="45" alt="email_image"></td>
-        <td>Yeast predicted interactions</td>
-        href="https://modelarchive.org/doi/10.5452/ma-bak-cepc"
+        <td>Yeast interactions</td>
+        <a href="https://modelarchive.org/doi/10.5452/ma-bak-cepc">Structure models of predicted yeast interactions</a>
       </tr>
     </tbody>
   </table>
