--- a/pages/about.html
+++ b/pages/about.html
@@ -11,7 +11,7 @@ title: About
         </tr>
         <tr>
             <td>
-Hello there, I'm Ian. I consider myself an evolutionary biologist despite residing in the Institute for Protein Design surrounded by people that circumvent billions of years of evolution to create new proteins. Instead I prefer to look into the past to gain insights into the present. I use protein sequences to predict structure based on evolutionary information and in turn, use structure to gain functional insights into organisms.
+Hello there, I'm Ian. I consider myself an evolutionary biologist residing in the Baker lab at the Institute for Protein Design. Despite being surrounded by people that circumvent billions of years of evolution to create new proteins, instead I prefer to look into the past to gain insights into native proteins of the present. I use protein sequences to predict structure based on evolutionary information and, in turn, use structure to gain functional insights into organismal biology.
             </td>
         </tr> 
    </tbody>
