--- a/pages/resources.html
+++ b/pages/resources.html
@@ -10,8 +10,7 @@ title: Resources
       <h4> Resources</h4> 
       <br> 
       <tr>
-        <td align="center"><img src="/images/gmail_logo.png" width="45" height="45" alt="email_image"></td>
-        <td>Yeast interactions</td>
+        <td align="center"><img src="/images/yeast_modelarchives.png" width="65" height="65" alt="proteins"></td>
         <a href="https://modelarchive.org/doi/10.5452/ma-bak-cepc">Structure models of predicted yeast interactions</a>
       </tr>
     </tbody>
