--- a/pages/resources.html
+++ b/pages/resources.html
@@ -6,13 +6,19 @@ title: Resources
 <div class="container">
   <div class="table">
     <table class="table-borderless">
-    <tbody>
-      <h4> Resources</h4> 
-      <br> 
-      <tr>
-        <td align="center"><img src="/images/Yeast_MA_fig.png" width="85" height="85" alt="proteins"></td>
-        <a href="https://modelarchive.org/doi/10.5452/ma-bak-cepc">Structure models of predicted yeast interactions</a>
-      </tr>
-    </tbody>
-  </table>
+      <tbody>
+        <h4> Resources</h4> 
+        <br> 
+        <tr>
+          <td align="center">
+            <a href="https://modelarchive.org/doi/10.5452/ma-bak-cepc">Structure models of predicted yeast interactions</a>
+          </td>
+          <td align="center">
+            <img src="/images/Yeast_MA_fig.png" width="85" height="85" alt="proteins">
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
 </div>
+
