--- a/pages/contact.html
+++ b/pages/contact.html
@@ -19,7 +19,7 @@ title: Contact
       </tr>
       <tr>
         <td align="center"><img src="/images/mailbox_logo.png" width="45" height="45" alt="mailbox_image"></td>
-        <td>Institute for Protein Design <br> Department of Biochemistry <br> University of Washington <br> NanoES/MolES <br> Seattle, WA 98105</td>
+        <td>Institute for Protein Design <br> Department of Biochemistry <br> University of Washington <br> Seattle, WA 98105</td>
       </tr>
     </tbody>
   </table>
